// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CallDetails Should match 1`] = `
<div>
   
  <div
    class="sc-hKgJUU dpFBPj"
  >
    <button
      class="sc-bdfBQB sc-idOiZg fuUPpr lmXhWs"
    >
      transfer
       (
      <span>
        <span
          class="sc-jrAFXE sc-kstqJO hTcuJV enoxhL"
          color="#fff"
        >
          address
        </span>
      </span>
      <span>
        <span>
          , 
        </span>
        <span
          class="sc-jrAFXE sc-kstqJO hTcuJV enoxhL"
          color="#fff"
        >
          uint256
        </span>
      </span>
      )
    </button>
  </div>
   
</div>
`;

exports[`CallDetails Should match with empty data 1`] = `
<div>
   
  <div
    class="sc-hKgJUU kHAvEK"
  >
    <button
      class="sc-bdfBQB sc-idOiZg fuUPpr lmXhWs"
    >
      approve (
       
      <span
        class="sc-jrAFXE sc-kstqJO hTcuJV enoxhL"
        color="#fff"
      >
        address
      </span>
      , 
      <span
        class="sc-jrAFXE sc-kstqJO hTcuJV enoxhL"
        color="#fff"
      >
        uint256
      </span>
       
      )
    </button>
  </div>
  <div
    class="sc-hKgJUU dpFBPj"
  >
    <button
      class="sc-bdfBQB sc-idOiZg fuUPpr lmXhWs"
    >
      transfer
       (
      <span>
        <span
          class="sc-jrAFXE sc-kstqJO hTcuJV enoxhL"
          color="#fff"
        >
          address
        </span>
      </span>
      <span>
        <span>
          , 
        </span>
        <span
          class="sc-jrAFXE sc-kstqJO hTcuJV enoxhL"
          color="#fff"
        >
          uint256
        </span>
      </span>
      )
    </button>
  </div>
   
</div>
`;
